deploy/kustomize/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-bank-backend
  labels:
    app: red-bank-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red-bank-backend
  template:
    metadata:
      labels:
        app: red-bank-backend
    spec:
      containers:
        - name: backend
          image: quay.io/hodrigohamalho/red-bank-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/accounts/summary
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/accounts/summary
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
