deploy/kustomize/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-bank-frontend
  labels:
    app: red-bank-frontend
spec:
  selector:
    app: red-bank-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
