deploy/kustomize/base/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: red-bank-backend
  labels:
    app: red-bank-backend
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  to:
    kind: Service
    name: red-bank-backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
